# notes_app

./: .gitignore  Cargo.toml  README.md
public/css/: styles.css
public/html/: login.html  main.html  note.html  register.html  tos.html
src/: handler.rs  main.rs  model.rs
